--- a/main/CMakeLists.txt
+++ b/main/CMakeLists.txt
@@ -1,4 +1,4 @@
 idf_component_register(SRCS "cyberfrog_main.c"
                     INCLUDE_DIRS ""
-                    PRIV_REQUIRES nvs_flash mbedtls slow_sig pn532
+                    PRIV_REQUIRES nvs_flash mbedtls slow_sig utils esp_timer
                     )
