--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -69,7 +69,9 @@
     "tuple": "c",
     "type_traits": "c",
     "utility": "c",
-    "pk.h": "c"
+    "pk.h": "c",
+    "rmt.h": "c",
+    "*.txt": "c"
   },
   "C_Cpp.errorSquiggles": "enabled"
 }
