--- a/components/utils/CMakeLists.txt
+++ b/components/utils/CMakeLists.txt
@@ -1,4 +1,3 @@
-idf_component_register(SRC_DIRS . 
-                       INCLUDE_DIRS .
-                       REQUIRES esp_driver_gpio
-                       )
+idf_component_register(SRC_DIRS .
+INCLUDE_DIRS .
+REQUIRES esp_driver_gpio nvs_flash st25dv)
