--- a/components/utils/CMakeLists.txt
+++ b/components/utils/CMakeLists.txt
@@ -1,3 +1,3 @@
 idf_component_register(SRC_DIRS .
 INCLUDE_DIRS .
-REQUIRES esp_driver_gpio mbedtls nvs_flash st25dv)
+REQUIRES esp_driver_gpio mbedtls nvs_flash st25dv signer zorxx__neopixel)
